--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,12 @@ set(CMAKE_CXX_STANDARD 14)
 file(GLOB SOURCES "src/*.cpp")
 
 add_executable(TextovaHra ${SOURCES})
+
+include(cmake/CPM.cmake)
+
+CPMAddPackage("gh:ArthurSonzogni/FTXUI#e0d98fe")
+target_link_libraries(TextovaHra
+    ftxui::component
+    ftxui::dom
+    ftxui::screen
+)
