Fix knihovny threads

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -18,5 +18,6 @@ RUN if [ "${REINSTALL_CMAKE_VERSION_FROM_SOURCE}" != "none" ]; then \
 #     && apt-get -y install --no-install-recommends <your-package-list-here>
 
 # Instalace Pythonu a potřebných nástrojů
-RUN apt-get install -y 
+RUN apt-get install -y
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive
+RUN apt-get install apt-get install libpthread-stubs0-dev
